banking-simple.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-simple
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: banking.alphonzojonesjr.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: banking-chatbot-svc
            port:
              number: 80
